kubernetes/homelab/apps/nextcloud/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  hosts:
  - drivex.daddyshome.fr
  gateways:
  - istio-ingress/homelab-mtls-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nextcloud
        port:
          number: 80
